fixed mobile menu major overlap

--- a/twitter_tunes/static/base.css
+++ b/twitter_tunes/static/base.css
@@ -1,3 +1,7 @@
+.clearfix {
+  clear: both;
+}
+
 header, hgroup, #blurbabout, #trends, #aboutus {
   border-bottom: 1px solid #000;
 }
@@ -35,6 +39,6 @@ h4 {
   margin: 5px;
 }
 
-.clearfix {
-  clear: both;
+@media only screen and (min-width: 640px) {
+  
 }
