--- a/twitter_tunes/static/layout.css
+++ b/twitter_tunes/static/layout.css
@@ -13,7 +13,7 @@ hgroup > img {
   right: 0px;
   top: 0px;
   padding: 10px;
-  font-size: 3.5em;
+  font-size: 3em;
 }
 
 nav > ul {
